--- a/index.html
+++ b/index.html
@@ -1,20 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>홈페이지복습</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-    <div>
-        <h1>대전아쿠아리움</h1>
-        <img id="ruhu" src="../img/ZA.36794903.1.jpg" alt="쌍둥바오">
-        <img id="su" src="../img/ss.png" alt="수달">
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus possimus, aliquam corrupti optio id, aliquid expedita, iure vero temporibus officiis sint ipsam tempore sequi modi quidem laborum cum alias totam.</p>
-    </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="font.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
+    <title>대전아쿠아리움</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/c47106c6a7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/ie.js"></script>
 
-    <a href="https://www.djaquarium.com/default/"> 아쿠아리움 바로가기</a>
+</head>
+
+<body>
+
+    <header>
+        <div class="inner">
+            <h1><a href="#"><img src="img/logo.png" alt=""></a></h1>
+            <ul id="gnb">
+                <li><a href="#">대전아쿠아리움</a></li>
+                <li><a href="#">테마존</a></li>
+                <li><a href="#">프로그램안내</a></li>
+                <li><a href="#">이용안내</a></li>
+            </ul>
+
+            <ul class="util">
+                <li><a href="#">예약하기</a></li>
+                <li><a href="#">단체예약하기</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <figure>
+        <img src="img/sea.jpg" alt="바다">
+        <div class="inner">
+
+            <h1>DAEJEON AQUARIUM</h1>
+            <p>국내 최대 규모의 담수어 수족관</p>
+        </div>
+        <div class="fish1">
+            <img src="img/fish3.png" alt="3">
+        </div>
+
+        <div class="fish2">
+            <img src="img/fish6.png" alt="6">
+        </div>
+        <section>
+            <div class="wrap">
+                <article class="main">
+                    <div class="sub">
+                        <a href="#"><img src="img/a2.gif" alt="a"></a>
+                        <h2> 체험프로그램</h2>
+                    </div>
+                </article>
+
+                <article class="main2">
+                    <div class="sub2">
+                        <a href="#"><img src="img/m.gif" alt="m"></a>
+                        <h2>공연프로그램</h2>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </figure>
+
+    <footer>
+        <div class="inner">
+            <div class="upper">
+                <h1><img src="img/logo.png" alt="LOGO"></h1>
+                <ul>
+                    <li><a href="#">blog</a></li>
+                    <li><a href="#">facebook</a></li>
+                    <li><a href="#">instagram</a></li>
+                </ul>
+            </div>
+
+            <div class="lower">
+                <address>
+                    대전 중구 보문산공원로 469 <br>
+                    <br>042-226-2100 <br><br> 1522-4090
+                </address>
+                <p>
+                    법인명 : 주식회사 신라애니멀그룹
+                </p>
+                <br>
+                <p>
+                    Copyright ⓒ 2015 대전아쿠아리움. All rights reserved
+                    <br><br>사업자등록번호:514-81-95043
+                </p>
+            </div>
+        </div>
+    </footer>
 
 </body>
+
 </html>
